--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,7 @@
+/*.hidden {
+	display: none;
+}
+*/
 nav {
 	background: #B5794E;
 	width: 100%;
@@ -19,12 +23,22 @@ nav ul li {
 }
 
 section#main {
-	background: url("../images/main.jpg");
-	width: 100%;
-	height: 100%;
-	position: absolute;
+	/*background: url("../images/main.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
+*/	width: 100%;
+	height: 100%;
+	position: absolute;
+	
+
+}
+
+footer {
+	position: fixed;
+	bottom: 0;
+	height: 20px;
+	width: 100%;
+	background: #31363A;
 
 }
 
@@ -64,7 +78,7 @@ section#main {
 }
 
 .search-area h1 {
-	color: #fff;
+
 	font-weight: 300;
 	font-size: 36px;
 	padding-bottom: 20px;
@@ -77,13 +91,13 @@ input[type="text"] {
 	font-size: 20px;
 	font-weight: 300;
 	box-shadow: none;
-	border: solid 1px #000;
+	border: solid 1px #bfbfbf;
 	margin-right: 10px;
 	margin-top: 10px;
 }
 
 input[type="text"]:hover {
-	border: solid 1px #efefef;
+	border: solid 1px #8f8f8f;
 }
 
 input[type="text"]:focus {
@@ -115,5 +129,58 @@ button:active {
 button:focus {
 	outline: none;
 }
+
+.col3 {
+	max-width: 75rem;
+	margin: 60px auto 40px auto;
+
+}
+
+.col3 > div {
+	width: 27%;
+	height: 320px;
+	display: inline-block;
+	margin-left: 4%;
+	background: url("../images/coffee-shop-pic.png");
+	background-size: cover;
+	font-family: 'Comfortaa', cursive;
+	color: #fff;
+}
+
+.info {
+	position: relative;
+	bottom: 0;
+	padding-left: 10px;
+	padding-top: 260px;
+}
+
+.info h3 {
+	font-size: 20px;
+	font-weight: 300;
+	padding-bottom: 5px;
+}
+
+div.info:nth-child(2) {
+	font-size: 16px;
+	font-weight: 300;
+}
+
+div.info:last-child {
+	font-size: 16px;
+	font-weight: 300;
+}
+
+.p-info p {
+	display: inline-block;
+}
+
+div.p-info + p {
+	padding-right: 20px;
+}
+
+.p-left {
+	padding-left: 90px;
+}
+
 
 
